--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 		            <h2 class="mb-4">About Me</h2>
 		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
+		            	<li class="d-flex"><span>Name:</span> <span>Sachin Arora</span></li>
+		            	<li class="d-flex"><span>Date of birth:</span> <span>November 09, 1989</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>Delhi, India</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>mymail2sachin08[at]gmail.com</span></li>
+		            	<li class="d-flex"><span>Phone: </span> <span>+91-8800286064</span></li>
 		            </ul>
 		          </div>
 		        </div>
