--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	        <!--  <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li> 
+	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -59,8 +59,8 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Sachin Arora</span></h1>
-			            <h2 class="mb-4">A Senior Software Engineer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			           <!--<p> <h2 class="mb-4">A Software Engineer</h2>
+			            <a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>  -->
 		            </div>
 		          </div>
 	        	</div>
@@ -76,9 +76,9 @@
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>Senior Software Engineer</span> based in Delhi</h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+		          		<!--<p><span class="subheading">Hello!</span> -->
+			            <h1 class="mb-4 mt-3">I'm a <span>Software Engineer</span> based in Delhi</h1>
+			          <!--<p>  <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
 		            </div>
 		          </div>
 	        	</div>
@@ -128,7 +128,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pb" id="resume-section">
+  <!--  <section class="ftco-section ftco-no-pb" id="resume-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
@@ -186,7 +186,7 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section>  
 
     <section class="ftco-section" id="services-section">
     	<div class="container">
@@ -262,7 +262,7 @@
 				</div>
     	</div>
     </section>
-
+-->
 		
 		<section class="ftco-section" id="skills-section">
 			<div class="container">
@@ -350,64 +350,66 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">My Projects</h2>
+            <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);">
+    			<div class="col-md-4" title="TAGSI is a ride service that partner’s kids and families with local drivers in the community.  By this application admin can create scheduled trips to pick-up or drop-off passengers. Driver can follow the route with the help of Map Box navigation.">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-4.jpg);" >
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://activescaler.com" target="_blank">Tagsi - IMDriver</a></h3>
+	    					<span></span>
 	    				</div>
     				</div>
   				</div>
-  				<div class="col-md-8">
+  				<div class="col-md-8" title="Sales Performance Management app has 7 modules which helps all DSM to open any new POS, Check-In any existing POS, take attendance of sales agents, books library, performance etc. This application is enabled with Push Messages, Digital Signature, Performance Chart. In India this app is published by MDM – Maas 360.">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-5.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://www.homecredit.co.in" target="_blank">Home Credit - SPM</a></h3>
+	    					<span></span>
 	    				</div>
     				</div>
   				</div>
 
-    			<div class="col-md-8">
+    			<div class="col-md-8" title="This app is integrated with ArcGIS Mapping. By this Application a user can create a service request in any area by map to control the mosquito activities. By subscribing for interested activities, user will be able to get notifications via FCM. This app is providing features to create a point in map with attachment also.">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="http://keysmosquito.org" target="_blank">Florida Mosquito Control </a></h3>
+	    					<span></span>
 	    				</div>
     				</div>
 
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" 
+					title="This android app gives users an opportunity to earn hard cash in their mobile wallet (virtual currency) by installing the other apps. Users can top up their mobiles, pay utility bills, purchase deals and premium content through this currency."
+					style="background-image: url(images/project-6.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://www.digispice.com/" target="_blank">FreeB</a></h3>
+	    					<span></span>
 	    				</div>
     				</div>
     			</div>
-    			<div class="col-md-4">
+    			<div class="col-md-4" title="Spice Safar is a B2C mobile application which enables user to do Railway Ticket Bookings (IRCTC), Recharge mobile, DTH & Data Cards, make Post-paid Mobile Bill payments on the move. It also has a Mobile Wallet for faster and secure payments. User can credit his wallet via ZaakPay Payment Gateway. App is enable with Sherlock SDK for nested Tab Fragments.">
     				<div class="row">
     					<div class="col-md-12">
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
+			    					<h3><a href="http://digispice.com" target="_blank">Spice Safar (IRCTC Train Ticket Booking App</a></h3>
+			    					<span></span>
 			    				</div>
 		    				</div>
 	    				</div>
-	    				<div class="col-md-12">
+	    				<div class="col-md-12" title="This app contains a large data dictionary for all the possible English Words. User can search for all the words for which they see in their dreams. In Journal section users have the option to save their dream words & and save the audio recording. This app is also enabled with Facebook, Twitter Integration. This app is available in Google Play Market and also on Amazon App Store. This application has 10 Lakh+ downloading on Play Store till now.">
 		    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
 		    					<div class="overlay"></div>
 			    				<div class="text text-center p-4">
-			    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-			    					<span>Web Design</span>
+			    					<h3><a href="http://www.dreammoods.com" target="_blank">Dream Moods</a></h3>
+			    					<span></span>
 			    				</div>
 		    				</div>
 	    				</div>
